<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.study.lusb1.mysinablog.activity.LoginActivity"
    xmlns:lusb1="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/launch_bg">

    <Button
        android:id="@+id/btn_add_acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_add"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="onClick"/>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        <com.study.lusb1.mysinablog.view.CircleImageView
            android:id="@+id/user_head_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/account_head_default"
            lusb1:borderRadius="50dp"
            lusb1:type="circle"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/no_user_now"/>
        <Button
            android:id="@+id/btn_choose_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_choose_user"
            android:onClick="onClick"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:onClick="onClick"/>
</LinearLayout>
